swagger configuration update
